--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="tab_background">#f7f7f7</color>
 
     <color name="gray">#FF666666</color>
+    <color name="blue_crm3">#25B6ed</color>
 </resources>
