--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="tab_background">#f7f7f7</color>
+    <color name="white">#FFFFFF</color>
 
     <color name="gray">#FF666666</color>
     <color name="blue_crm3">#25B6ed</color>
