--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,12 +10,15 @@
 
     <style name="YuanJinTheme" parent="Base.V7.Theme.AppCompat.Light">
         <item name="actionBarStyle">@style/YuanJinActionBarBaseStyle</item>
+        <item name="toolbarStyle">@style/YuanJinActionBarBaseStyle</item>
     </style>
 
-    <style name="YuanJinActionBarBaseStyle" parent="Base.Widget.AppCompat.ActionBar">
+    <style name="YuanJinActionBarBaseStyle" parent="@style/Widget.AppCompat.ActionBar">
         <item name="contentInsetStart">0dp</item>
         <item name="contentInsetEnd">0dp</item>
         <item name="height">50dp</item>
     </style>
+
+
 
 </resources>
