--- a/app/src/main/res/layout/item_recycleview.xml
+++ b/app/src/main/res/layout/item_recycleview.xml
@@ -9,5 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
+        android:background="@drawable/recyclerview_item_bg"
         android:text="1" />
 </FrameLayout>
