--- a/app/src/main/res/layout/item_recycleview.xml
+++ b/app/src/main/res/layout/item_recycleview.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:background="#44ff0000"
              android:layout_height="wrap_content" >
 
     <TextView
-        android:id="@+id/id_recycler_num"
+        android:id="@+id/id_recycler_text"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:background="@drawable/recyclerview_item_bg"
+        android:paddingLeft="20dp"
         android:text="1" />
 </FrameLayout>
