--- a/app/src/main/res/layout/activity_rxjavamain.xml
+++ b/app/src/main/res/layout/activity_rxjavamain.xml
@@ -7,5 +7,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This is RxJava"/>
+    <ImageView
+        android:id="@+id/imageview_rxjava"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
