--- a/app/src/main/res/layout/activity_scroller.xml
+++ b/app/src/main/res/layout/activity_scroller.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/layout"
+              android:background="@color/blue_crm3"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:gravity="center"
               android:orientation="vertical">
 
-    <net.yuanjin.mytest.viewstudy.MScrollView
-        android:id="@+id/testarea"
-        android:background="@color/blue_crm"
-        android:layout_width="match_parent"
-        android:layout_height="400dp">
+    <Button
+        android:id="@+id/scroll_to_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="scrollTo"/>
 
-    </net.yuanjin.mytest.viewstudy.MScrollView>
+    <Button
+        android:id="@+id/scroll_by_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="scrollBy"/>
 
 
 </LinearLayout>
