--- a/app/src/main/res/layout/activity_scroller.xml
+++ b/app/src/main/res/layout/activity_scroller.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/layout"
-              android:background="@color/blue_crm3"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/blue_crm3"
               android:orientation="vertical">
     <net.yuanjin.mytest.viewstudy.scrolltest.ScrollerLayout
         android:layout_width="match_parent"
@@ -38,6 +38,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="scrollBy"/>
+
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/layout_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"/>
+        <Button
+            android:id="@+id/layout_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LayoutParams 改变隐藏view 移动"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
