--- a/app/src/main/res/layout/activity_scroller.xml
+++ b/app/src/main/res/layout/activity_scroller.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="全屏拖动"/>
+            android:text="全屏拖动(NineOldAndroids)"/>
 
     </net.yuanjin.mytest.viewstudy.scrolltest.MoveableLayout>
 
